updated vert.x to 3.5.3, removed joda-time for java-time